UNRW-672: Fixed issue with misplace icon on iPhone.

--- a/source/scss/components/molecules/_header.scss
+++ b/source/scss/components/molecules/_header.scss
@@ -129,9 +129,10 @@
     &:after {
       @include arrow($color--blue, right);
       display: inline-block;
-      position: relative;
-      top: 21px;
-      right: -0.5em;
+      position: absolute;
+      top: 36px;
+      left: 50%;
+      margin-left: 70px;
     }
   }
 }
